--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
+.navshow {
+  @apply flex flex-col bg-black w-full items-center absolute left-0 md:static  
+}
+
+.navhide {
+  @apply hidden flex flex-col bg-black w-full items-center absolute left-0 md:static md:block md:bg-transparent md:pt-12
+}
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 36, 36, 40;
+  --background-start-rgb: 36, 36, 40;
+  --background-end-rgb: 36, 36, 40;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 36, 36, 40;
+    --background-end-rgb: 36, 36, 40;
   }
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
